--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dockerode": "^2.5.0"
+    "dockerode": "^2.5.0",
+    "socket.io": "^2.0.3"
   }
 }
