--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "scratchdocker",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "dockerode": "^2.5.0",
-    "socket.io": "^2.0.3"
-  }
+    "name": "dockerclient",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node ./index.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "dockerode": "^2.5.0",
+        "socket.io": "^2.0.3"
+    }
 }
