--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "dockerode": "^2.5.0",
+        "express": "^4.15.3",
         "socket.io": "^2.0.3"
     }
 }
